--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorRed">#D32F2F</color>
+    <color name="colorHint">#757575</color>
+    <color name="colorText">#1A1A1A</color>
+    <color name="colorTextOption">#223038</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBackground">#FAFAFA</color>
 </resources>
