fixed the division of the number for a correct result

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -51,7 +51,7 @@
                         android:layout_height="50dp"
                         android:background="@drawable/input_background"
                         android:hint="@string/input_value_1"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:lineSpacingExtra="3sp"
                         android:paddingStart="11.8dp"
                         android:paddingEnd="11.8dp"
@@ -76,7 +76,7 @@
                         android:layout_height="50dp"
                         android:background="@drawable/input_background"
                         android:hint="@string/input_value_2"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:lineSpacingExtra="3sp"
                         android:paddingStart="11.8dp"
                         android:paddingEnd="11.8dp"
